9744
To clarify, you get the correct message if you compile both files together:
{code}
scalac -d classes File*.scala
File2.scala:1: error: Companions 'class Token' and 'object Token' must be defined in same file:
  Found in /Users/grek/tmp/scala-companion/File1.scala and /Users/grek/tmp/scala-companion/File2.scala
object Token {
       ^
one error found
{code}

However, if you compile files separately you get misleading error message:

{code}
$ scalac -d classes File1.scala
$ scalac -cp classes/ -d classes File2.scala
File2.scala:3: error: not found: type Token
   def apply(input:String):Seq[Token] = Seq[Token]()
                               ^
File2.scala:3: error: not found: type Token
   def apply(input:String):Seq[Token] = Seq[Token]()
                                            ^
two errors found
{code}
